Render splash screen, main game loop.

--- a/project.json
+++ b/project.json
@@ -13,6 +13,10 @@
 
     "jsList" : [
         "src/resource.js",
-        "src/app.js"
+        "src/app.js",
+        "src/AnimationLayer.js",
+        "src/BackgroundLayer.js",
+        "src/PlayScene.js",
+        "src/StatusLayer.js"
     ]
 }
